Fixed issues of compatibility with modern python versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,9 @@
 [options]
-python_requires = >= 3.7, <3.10
 install_requires =
     keras
     python-libsbml
-    lxml==4.9
-    mordred==1.2
+    lxml
+    mordred
     pandas
     pymongo
     rdkit
